--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
   "name": "mochimo-wots-v2",
   "version": "0.0.1",
   "description": "TypeScript implementation of Mochimo WOTS v2",
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test"
+    "prepare": "pnpm build",
+    "prepublishOnly": "pnpm test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mochimodev/mochimo-wots-v2.git"
+    "url": "git+https://github.com/wagleanuj/mochimo-wots-v2.git"
   },
   "keywords": [
     "cryptocurrency",
@@ -29,19 +31,21 @@
     "typescript",
     "mochimo"
   ],
-  "author": "Mochimo Developers",
+  "author": "Anuj Wagle",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mochimodev/mochimo-wots-v2/issues"
+    "url": "https://github.com/wagleanuj/mochimo-wots-v2/issues"
   },
-  "homepage": "https://github.com/mochimodev/mochimo-wots-v2#readme",
+  "homepage": "https://github.com/wagleanuj/mochimo-wots-v2#readme",
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.14",
-    "@types/node": "^16.0.0",
+    "@types/node": "^18.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^4.5.0"
+    "typescript": "^4.5.0",
+    "vite": "^6.0.5",
+    "vite-plugin-dts": "^4.4.0"
   },
   "dependencies": {
     "crypto-js": "^4.2.0"
