--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "homepage": "https://github.com/wagleanuj/mochimo-wots-v2#readme",
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.0.0",
     "jest": "^29.7.0",
@@ -48,6 +47,6 @@
     "vite-plugin-dts": "^4.4.0"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0"
+    "@noble/hashes": "^1.7.0"
   }
 }
