change names in package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mochimo-wots-v2",
+  "name": "mochimo-wots",
   "version": "1.1.1",
-  "description": "TypeScript implementation of Mochimo WOTS v2",
+  "description": "TypeScript implementation of Mochimo WOTS for v3",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
