--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vite-plugin-dts": "^4.4.0"
   },
   "dependencies": {
-    "@noble/hashes": "^1.7.0"
+    "@noble/hashes": "^1.7.0",
+    "bs58": "^6.0.0"
   }
 }
